force-app/main/default/objects/Account/fields/Du_Sie__c.field-meta.xml
<CustomField>
    <fullName>Du_Sie__c</fullName>
    <formula>IF(TEXT(Du_Sie_Override__c)&lt;&gt;&quot;&quot;,TEXT(Du_Sie_Override__c),
  IF(TEXT(PrimaryLanguage__c)=&quot;German&quot;,
    IF(DATEVALUE(CreatedDate)&lt;DATE(2020,07,15),&quot;DU&quot;,&quot;SIE&quot;),
  &quot;&quot;)
)</formula>
    <label>Du/Sie</label>
    <type>Text</type>
</CustomField>