force-app/main/default/objects/Account/fields/Du_Sie_Override__c.field-meta.xml
<CustomField>
    <fullName>Du_Sie_Override__c</fullName>
    <label>Du/Sie Override</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PrimaryLanguage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Du</fullName>
            </value>
            <value>
                <fullName>Sie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>