force-app/main/default/objects/Account/fields/Dunning_0_Date__c.field-meta.xml
<CustomField>
    <fullName>Dunning_0_Date__c</fullName>
    <label>Dunning 0 Date</label>
    <type>Date</type>
</CustomField>