force-app/main/default/objects/Account/fields/Dunning_0_Subject__c.field-meta.xml
<CustomField>
    <fullName>Dunning_0_Subject__c</fullName>
    <formula>IF ( TEXT(PrimaryLanguage__c) = &quot;English&quot;, &quot;Payment Reminder:&quot;, 
IF(TEXT(PrimaryLanguage__c)=&quot;French&quot;,&quot;Rappel de facture:&quot;,&quot;Zahlungserinnerung:&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dunning 0 Subject</label>
    <type>Text</type>
</CustomField>