force-app/main/default/objects/Account/fields/Dunning_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Dunning_1_Date__c</fullName>
    <label>Dunning 1 Date</label>
    <type>Date</type>
</CustomField>