force-app/main/default/objects/Account/fields/Dunning_1_Subject__c.field-meta.xml
<CustomField>
    <fullName>Dunning_1_Subject__c</fullName>
    <formula>IF ( TEXT(PrimaryLanguage__c) = &quot;English&quot;, &quot;Second Payment Reminder:&quot;, 
IF(TEXT(PrimaryLanguage__c)=&quot;French&quot;,&quot;Lettre de rappel:&quot;,&quot;Mahnung:&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dunning 1 Subject</label>
    <type>Text</type>
</CustomField>