force-app/main/default/objects/Account/fields/Dunning_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Dunning_2_Date__c</fullName>
    <label>Dunning 2 Date</label>
    <type>Date</type>
</CustomField>