force-app/main/default/objects/Account/fields/Dunning_Status__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Status__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Dunning_X_Date__c)),
    &quot;Closed&quot;,
    IF(
        NOT(ISBLANK(Dunning_2_Date__c)),
        &quot;2nd Dunning&quot;,
        IF(
            NOT(ISBLANK(Dunning_1_Date__c)),
            &quot;1st Dunning&quot;,
            IF(
                NOT(ISBLANK(Dunning_0_Date__c)),
                &quot;Friendly Reminder&quot;,
                &quot;Not in Dunning&quot;
            )
        )
    )
)</formula>
    <label>Dunning Status</label>
    <type>Text</type>
</CustomField>