force-app/main/default/objects/Account/fields/Dunning_X_Date__c.field-meta.xml
<CustomField>
    <fullName>Dunning_X_Date__c</fullName>
    <label>Dunning X Date</label>
    <type>Date</type>
</CustomField>