force-app/main/default/objects/Account/fields/E_Mail_of_official_authorized_signatory__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_of_official_authorized_signatory__c</fullName>
    <label>E-Mail of official authorized signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>