force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Read-Only field that was used for data migration. Please use the contact(s) to store contact related information.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>