force-app/main/default/objects/Account/fields/Exclude_Name_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Name_on_Invoice__c</fullName>
    <label>Exclude Name on Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>