force-app/main/default/objects/Account/fields/Far_to_Home__c.field-meta.xml
<CustomField>
    <fullName>Far_to_Home__c</fullName>
    <formula>DISTANCE( BillingAddress, GEOLOCATION( 52.5021546, 13.4090426 ), &apos;km&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Far to Home</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>