force-app/main/default/objects/Account/fields/First_Paid_Date_2__c.field-meta.xml
<CustomField>
    <fullName>First_Paid_Date_2__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-509</description>
    <inlineHelpText>When did the first payment for this account go into effect?</inlineHelpText>
    <label>First Paid Date</label>
    <summarizedField>Payment__c.EffectiveDate__c</summarizedField>
    <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>