force-app/main/default/objects/Account/fields/First_Payment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Created_Date__c</fullName>
    <label>First Payment Created Date</label>
    <summarizedField>Payment__c.CreatedDate</summarizedField>
    <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>