force-app/main/default/objects/Account/fields/First_POS_Start_Date_2__c.field-meta.xml
<CustomField>
    <fullName>First_POS_Start_Date_2__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-511</description>
    <inlineHelpText>When did this customer&apos;s first subscription start?</inlineHelpText>
    <label>First Subscription Start Date</label>
    <summarizedField>Subscription__c.SubscriptionStartDate__c</summarizedField>
    <summaryForeignKey>Subscription__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>