force-app/main/default/objects/Account/fields/First_POS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>First_POS_Start_Date__c</fullName>
    <label>First POS Start Date OLD</label>
    <type>Date</type>
</CustomField>