force-app/main/default/objects/Account/fields/FirstInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>FirstInvoiceDate__c</fullName>
    <label>First Invoice Date</label>
    <summarizedField>Invoice__c.InvoiceDate__c</summarizedField>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>