force-app/main/default/objects/Account/fields/FirstLeadforMETRO__c.field-meta.xml
<CustomField>
    <fullName>FirstLeadforMETRO__c</fullName>
    <description>Stakeholder: Partner (METRO)</description>
    <inlineHelpText>When has the first METRO Lead been created (Prospect said &quot;yes&quot; to one of the solutions)? Gets filled in automatically</inlineHelpText>
    <label>First Lead for METRO</label>
    <type>Date</type>
</CustomField>