force-app/main/default/objects/Account/fields/FirstOppCloseDate__c.field-meta.xml
<CustomField>
    <fullName>FirstOppCloseDate__c</fullName>
    <description>Formula Field to pre-populate the date of the first won opportunity</description>
    <inlineHelpText>Date of the first Closed Won opportunity</inlineHelpText>
    <label>First Opp Close Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>