force-app/main/default/objects/Account/fields/Get_It_Done_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Get_It_Done_Submission_Date__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1142</description>
    <inlineHelpText>When did this account get submitted to out partner Get-It-Done? Managed by Partner Management</inlineHelpText>
    <label>Get-It-Done Submission Date</label>
    <type>Date</type>
</CustomField>