force-app/main/default/objects/Account/fields/Hofmann_Leasing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hofmann_Leasing_End_Date__c</fullName>
    <description>https://jira.orderbird.com/browse/CRMT-3270</description>
    <label>Hofmann Leasing End Date</label>
    <type>Date</type>
</CustomField>