force-app/main/default/objects/Account/fields/ID_18__c.field-meta.xml
<CustomField>
    <fullName>ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID 18 digits</label>
    <type>Text</type>
</CustomField>