force-app/main/default/objects/Account/fields/Id_Card__c.field-meta.xml
<CustomField>
    <fullName>Id_Card__c</fullName>
    <label>Id Card</label>
    <type>Url</type>
</CustomField>