force-app/main/default/objects/Account/fields/Id_Card_chk__c.field-meta.xml
<CustomField>
    <fullName>Id_Card_chk__c</fullName>
    <label>Id Card check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>