force-app/main/default/objects/Account/fields/IndoorSeats__c.field-meta.xml
<CustomField>
    <fullName>IndoorSeats__c</fullName>
    <description>Stakeholder: Sales with BI</description>
    <inlineHelpText>What is the total number of seats inside the venue? Sales Reps have to fill in this information during sales talk.</inlineHelpText>
    <label># Indoor Seats</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>&lt;10</fullName>
            </value>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>21-30</fullName>
            </value>
            <value>
                <fullName>31-50</fullName>
            </value>
            <value>
                <fullName>51-75</fullName>
            </value>
            <value>
                <fullName>76-100</fullName>
            </value>
            <value>
                <fullName>101-150</fullName>
            </value>
            <value>
                <fullName>151-200</fullName>
            </value>
            <value>
                <fullName>200+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>