force-app/main/default/objects/Account/fields/InsightdeliveredtoMETRO__c.field-meta.xml
<CustomField>
    <fullName>InsightdeliveredtoMETRO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: PaM (METRO)</description>
    <inlineHelpText>Have the insights from this account already been to METRO in the context of the Joint Salesforce?</inlineHelpText>
    <label>Insight delivered to METRO</label>
    <type>Checkbox</type>
</CustomField>