force-app/main/default/objects/Account/fields/Instalment_Contract__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Contract__c</fullName>
    <label>Instalment Contract</label>
    <type>Url</type>
</CustomField>