force-app/main/default/objects/Account/fields/Instalment_Contract_chk__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Contract_chk__c</fullName>
    <label>Instalment Contract check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>