force-app/main/default/objects/Account/fields/Interwega_Balance_Difference__c.field-meta.xml
<CustomField>
    <fullName>Interwega_Balance_Difference__c</fullName>
    <formula>if (text(CurrencyIsoCode) = &quot;EUR&quot;,  Combined_Balance__c  - Interwega_Open_Balance_wo_fees__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Orderbird Balance minus Interwega Open Balance (excl. fees)</inlineHelpText>
    <label>Interwega Balance Difference (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>