force-app/main/default/objects/Account/fields/Interwega_Debt_Collection_Id__c.field-meta.xml
<CustomField>
    <fullName>Interwega_Debt_Collection_Id__c</fullName>
    <label>Interwega Debt Collection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>