force-app/main/default/objects/Account/fields/Interwega_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Interwega_Reference_Date__c</fullName>
    <label>Interwega Reference Date</label>
    <type>Date</type>
</CustomField>