force-app/main/default/objects/Account/fields/Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count__c</fullName>
    <formula>Cleared_Invoice_Count__c + Not_Cleared_Invoice_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>