force-app/main/default/objects/Account/fields/IsTest__c.field-meta.xml
<CustomField>
    <fullName>IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Account</label>
    <type>Checkbox</type>
</CustomField>