force-app/main/default/objects/Account/fields/Last_Invoice_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Date_2__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-509</description>
    <inlineHelpText>When has the most recent invoice been dated?</inlineHelpText>
    <label>Last Invoice Date</label>
    <summarizedField>Invoice__c.InvoiceDate__c</summarizedField>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>