force-app/main/default/objects/Account/fields/Last_Invoice_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Payment_Status__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-53</description>
    <label>Last Invoice: Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>