force-app/main/default/objects/Account/fields/Last_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Paid_Date__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-509</description>
    <inlineHelpText>When has the most recent payment become effective?</inlineHelpText>
    <label>Last Paid Date</label>
    <summarizedField>Payment__c.EffectiveDate__c</summarizedField>
    <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>