force-app/main/default/objects/Account/fields/Last_Payment_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True for Payments created that fill the requirements mentioned in:
https://jira.orderbird.com/browse/CDS-3010</description>
    <label>Last Payment Rollup</label>
    <type>Checkbox</type>
</CustomField>