force-app/main/default/objects/Account/fields/Last_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Update__c</fullName>
    <label>Last Status Update</label>
    <type>DateTime</type>
</CustomField>