force-app/main/default/objects/Account/fields/LastOppCloseDate__c.field-meta.xml
<CustomField>
    <fullName>LastOppCloseDate__c</fullName>
    <description>Formula Field to pre-populate the date of the most recent closed won opportunity</description>
    <inlineHelpText>Date of the most recent Closed Won opportunity</inlineHelpText>
    <label>Last Opp Close Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>