force-app/main/default/objects/Account/fields/LastSuccessfulCommunication__c.field-meta.xml
<CustomField>
    <fullName>LastSuccessfulCommunication__c</fullName>
    <description>Stakeholders: Sales &amp; CS</description>
    <inlineHelpText>When was the last successful communication with a representative of this account? Filled in automatically</inlineHelpText>
    <label>Last Successful Communication</label>
    <type>Date</type>
</CustomField>