force-app/main/default/objects/Account/fields/LeadManagementUser__c.field-meta.xml
<CustomField>
    <fullName>LeadManagementUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User lookup to specify the Lead Manager</description>
    <inlineHelpText>Initial responsible Lead Manager</inlineHelpText>
    <label>Lead Management User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>