force-app/main/default/objects/Account/fields/Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Type__c</fullName>
    <description>Stakeholder: Pay 
https://jira.orderbird.com/browse/CDS-2115</description>
    <label>Legal Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>e.G.</fullName>
            </value>
            <value>
                <fullName>e.K.</fullName>
            </value>
            <value>
                <fullName>e.V.</fullName>
            </value>
            <value>
                <fullName>einfache Gesellschaft</fullName>
            </value>
            <value>
                <fullName>Einzelunternehmen</fullName>
            </value>
            <value>
                <fullName>GbR</fullName>
            </value>
            <value>
                <fullName>GesnbR</fullName>
            </value>
            <value>
                <fullName>gGmbH</fullName>
            </value>
            <value>
                <fullName>GmbH</fullName>
            </value>
            <value>
                <fullName>GmbH &amp; Co KG</fullName>
            </value>
            <value>
                <fullName>K.d.ö.R.</fullName>
            </value>
            <value>
                <fullName>Kollektiv Gesellschaft</fullName>
            </value>
            <value>
                <fullName>OG</fullName>
            </value>
            <value>
                <fullName>OHG</fullName>
            </value>
            <value>
                <fullName>Stiftung</fullName>
            </value>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>UG &amp; Co KG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>