force-app/main/default/objects/Account/fields/Link_to_NS_Account__c.field-meta.xml
<CustomField>
    <fullName>Link_to_NS_Account__c</fullName>
    <formula>IF(!ISNULL(NS_Customer_Internal_ID__c),
HYPERLINK(&quot;https://system.eu2.netsuite.com/app/common/entity/custjob.nl?id=&quot; &amp; NS_Customer_Internal_ID__c &amp; &quot;&amp;whence=&quot;, &quot;Click here&quot;),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Netsuite</label>
    <type>Text</type>
</CustomField>