force-app/main/default/objects/Account/fields/Mind_Set__c.field-meta.xml
<CustomField>
    <fullName>Mind_Set__c</fullName>
    <description>Stakeholder: Sales 
https://jira.orderbird.com/browse/CDS-1341</description>
    <inlineHelpText>Is this Account overall more open minded and willing to embrace new technology (Innovator), or a bit conservative and technophobe?</inlineHelpText>
    <label>Mind Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Innovator</fullName>
            </value>
            <value>
                <fullName>Pragmatist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>