force-app/main/default/objects/Account/fields/MissingFeature1__c.field-meta.xml
<CustomField>
    <fullName>MissingFeature1__c</fullName>
    <description>Stakeholder: Sales with PM &amp; BI</description>
    <inlineHelpText>What would this caterer like to see as an orderbird feature? Filled in by Sales</inlineHelpText>
    <label>Missing Feature 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&apos;magic button&apos;/&apos;no revenue&apos; transactions</fullName>
            </value>
            <value>
                <fullName>Regular Table&apos; Features</fullName>
            </value>
            <value>
                <fullName>Accumulated Turnover (open/cleared)</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Arrange items/groups in orderpad</fullName>
            </value>
            <value>
                <fullName>Asian character</fullName>
            </value>
            <value>
                <fullName>Automated duplicate of bill</fullName>
            </value>
            <value>
                <fullName>Automatic course management</fullName>
            </value>
            <value>
                <fullName>Barcode scanner</fullName>
            </value>
            <value>
                <fullName>Bigger buttons</fullName>
            </value>
            <value>
                <fullName>Bill printing - bigger total</fullName>
            </value>
            <value>
                <fullName>Billing Address</fullName>
            </value>
            <value>
                <fullName>bills after shift ending</fullName>
            </value>
            <value>
                <fullName>cable printer</fullName>
            </value>
            <value>
                <fullName>Call system with numbers (self service)</fullName>
            </value>
            <value>
                <fullName>Cancellation Protection</fullName>
            </value>
            <value>
                <fullName>Card payment receipt</fullName>
            </value>
            <value>
                <fullName>Cash card system</fullName>
            </value>
            <value>
                <fullName>cash-in-hand feature</fullName>
            </value>
            <value>
                <fullName>chain store features</fullName>
            </value>
            <value>
                <fullName>chain store management</fullName>
            </value>
            <value>
                <fullName>change calculator</fullName>
            </value>
            <value>
                <fullName>Change on bill</fullName>
            </value>
            <value>
                <fullName>CHF in my.orderbird</fullName>
            </value>
            <value>
                <fullName>Chip &amp; PIN card payment</fullName>
            </value>
            <value>
                <fullName>colourful buttons</fullName>
            </value>
            <value>
                <fullName>Connection to Peripheral Devices</fullName>
            </value>
            <value>
                <fullName>coupon feature</fullName>
            </value>
            <value>
                <fullName>Course management</fullName>
            </value>
            <value>
                <fullName>Customer counter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>